langtools/test/tools/javac/unicode/NonasciiDigit2.out
NonasciiDigit2.java:12:18: compiler.err.illegal.nonascii.digit
1 error
